# accel-challenge-1

./: Anchor.toml  Cargo.toml  package-lock.json  package.json
programs/accel-1-challenge/: Cargo.toml
programs/accel-1-challenge/src/: error.rs  lib.rs
programs/accel-1-challenge/src/instructions/: add_whitelist.rs  deposit.rs  init_extra_account_meta.rs  initialize_vault.rs  mint_token.rs  mod.rs  transfer_hook.rs  withdraw.rs
programs/accel-1-challenge/src/state/: mod.rs  user.rs  vault.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
programs/transfer-hook/src/instructions/: init_extra_account_meta.rs  mod.rs  transfer_hook.rs
programs/transfer-hook/src/state/: whitelist.rs
tests/: accel-1-challenge.ts
